--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "@types/react-redux": "^7.1.24",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "intl": "^1.2.5",
